# NEAU-GPA-Getter

./: .gitignore  LICENSE-MIT  README.md  package-lock.json  package.json  tailwind.config.js
src/: app.css  app.html  app.postcss  store.js
src-tauri/: .gitignore  Cargo.toml  data.db  tauri.conf.json
src-tauri/migrations/: 20241004132853_create_tables.sql
src-tauri/src/: api.rs  csv_parser.rs  main.rs
src-tauri/src/api/: csv_parser.rs  csv_processor.rs  data_parser.rs  db.rs  err.rs  student.rs
src-tauri/src/api/db/: table.rs
src/lib/components/: AcademicInfoSelector.svelte  DataImporter.svelte  Datatable.svelte  Pagination.svelte  RowCount.svelte  RowsPerPage.svelte  Search.svelte  ThSort.svelte
src/lib/components/table/: Datatable.svelte  Pagination.svelte  ThFilter.svelte
src/lib/data/: data.js
src/routes/: +layout.svelte  +page.svelte  Sidebar.svelte
src/routes/settings/: +page.svelte  FileSelector.svelte
