[package]
name = "neau-gpa-getter"
version = "0.1.0"
description = "A Tauri App to get gpa info for NEAUer"
authors = ["Laixi Liu"]
license = "MIT OR APACHE-2.0"
repository = "https://github.com/LaixiLiu/NEAU-GPA-Getter.git"
default-run = "neau-gpa-getter"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
regex = "1.9.6"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.30", features = ["full"] }
tempfile = "3"
dotenv = "0.15.0"
thiserror = "1"
time = "^0.3"
log = { version = "0.4" }
simplelog = "^0.12.2"
futures = "0.3"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
